--- a/covarianza.ipynb
+++ b/covarianza.ipynb
@@ -5,9 +5,7 @@
    "id": "fa9ef7cb-22e9-470a-9ea9-f135e1c2022f",
    "metadata": {},
    "source": [
-    "¡Perfecto! Podemos adaptar tu sección de covarianza siguiendo **exactamente** el estilo de tu ejemplo, cambiando a un contexto más neutral, por ejemplo, **mediciones de producción en cuatro máquinas**. Además, los datos irán en una sección aparte con el código de simulación. Te propongo el siguiente markdown:\n",
     "\n",
-    "---\n",
     "\n",
     "## Covarianza\n",
     "\n",
@@ -45,59 +43,7 @@
     "* \\$n\\$: tamaño de la muestra\n",
     "\n",
     "</div>\n",
-    "\n",
-    "---\n",
-    "\n",
-    "<div class=\"alert alert-success\">\n",
-    "\n",
-    "## Ejercicio 1.\n",
-    "\n",
-    "Con el siguiente código en Python se genera un conjunto de **mediciones de producción diaria** de cuatro máquinas durante un periodo de \\$1000\\$ días.\n",
-    "\n",
-    "```python\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "np.random.seed(616) # Fijamos la semilla para reproducibilidad\n",
-    "N = 1000 # Número de días simulados\n",
-    "\n",
-    "# Simulación de producción diaria (unidades producidas)\n",
-    "maquina_A = 200 + 15 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 5, N)\n",
-    "maquina_B = 180 + 20 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 8, N)\n",
-    "maquina_C = 150 + 10 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 6, N)\n",
-    "maquina_D = 170 + 25 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 10, N)\n",
-    "\n",
-    "# DataFrame para visualización\n",
-    "df = pd.DataFrame({\n",
-    "    \"Máquina A\": np.round(maquina_A, 1),\n",
-    "    \"Máquina B\": np.round(maquina_B, 1),\n",
-    "    \"Máquina C\": np.round(maquina_C, 1),\n",
-    "    \"Máquina D\": np.round(maquina_D, 1),\n",
-    "    \"Día\": np.arange(1, N + 1)\n",
-    "})\n",
-    "\n",
-    "df.head()\n",
-    "```\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "Este código tiene las siguientes características:\n",
-    "\n",
-    "* **Generación sintética**: Se utiliza la función trigonométrica \\$\\sin()\\$ ( `np.sin()` ) para simular ciclos de producción y ruido gaussiano (`np.random.normal()`) para variaciones diarias.\n",
-    "* **Reproducibilidad**: Se fija una semilla (`np.random.seed`) para obtener resultados reproducibles.\n",
-    "* **Formato estructurado**: Los datos se almacenan en un `DataFrame` de `pandas` para facilitar su análisis y visualización.\n",
-    "* **Variables simuladas**: Cada arreglo representa la producción diaria de una máquina distinta, con distintos patrones de variabilidad y tendencia.\n",
-    "\n",
-    "<br>\n",
-    "Copia el código en la celda que sigue y ejecútalo.\n",
-    "\n",
-    "</div>\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Si quieres, puedo **hacer la siguiente sección de cálculo de covarianza** también en este mismo estilo, con la explicación y ejemplo práctico de cómo calcular \\$\\text{Cov}(X, Y)\\$ entre dos máquinas.\n",
-    "\n",
-    "¿Quieres que haga esa parte ahora?\n"
+    "\n"
    ]
   },
   {
@@ -114,7 +60,6 @@
     "\n",
     "```python\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "\n",
     "np.random.seed(616) # Fijamos la semilla para reproducibilidad\n",
     "N = 1000 # Número de días simulados\n",
@@ -122,19 +67,7 @@
     "# Simulación de producción diaria (unidades producidas)\n",
     "maquina_A = 200 + 15 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 5, N)\n",
     "maquina_B = 180 + 20 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 8, N)\n",
-    "maquina_C = 150 + 10 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 6, N)\n",
-    "maquina_D = 170 + 25 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 10, N)\n",
     "\n",
-    "# DataFrame para visualización\n",
-    "df = pd.DataFrame({\n",
-    "    \"Máquina A\": np.round(maquina_A, 1),\n",
-    "    \"Máquina B\": np.round(maquina_B, 1),\n",
-    "    \"Máquina C\": np.round(maquina_C, 1),\n",
-    "    \"Máquina D\": np.round(maquina_D, 1),\n",
-    "    \"Día\": np.arange(1, N + 1)\n",
-    "})\n",
-    "\n",
-    "df.head()\n",
     "```\n",
     "\n",
     "<br>\n",
@@ -143,259 +76,159 @@
     "\n",
     "* **Generación sintética**: Se utiliza la función trigonométrica \\$\\sin()\\$ ( `np.sin()` ) para simular ciclos de producción y ruido gaussiano (`np.random.normal()`) para variaciones diarias.\n",
     "* **Reproducibilidad**: Se fija una semilla (`np.random.seed`) para obtener resultados reproducibles.\n",
-    "* **Formato estructurado**: Los datos se almacenan en un `DataFrame` de `pandas` para facilitar su análisis y visualización.\n",
     "* **Variables simuladas**: Cada arreglo representa la producción diaria de una máquina distinta, con distintos patrones de variabilidad y tendencia.\n",
     "\n",
     "<br>\n",
     "Copia el código en la celda que sigue y ejecútalo.\n",
     "\n",
-    "</div>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f087e2f8-6728-41a1-9036-4cac1bb4cf75",
-   "metadata": {},
-   "source": [
-    "# Covarianza\n",
-    "\n",
-    "Este notebook explora el concepto de **covarianza**, su interpretación estadística, fórmulas para población y muestra, y ejemplos prácticos con datos simulados.\n",
-    "\n",
-    "  ]\r\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dc55f03d-8ada-4d4e-80bb-ebe2977b1ccc",
-   "metadata": {},
-   "source": [
-    "## Concepto de Covarianza\n",
-    "\n",
-    "La **covarianza** mide el grado en que dos variables cambian juntas:\n",
-    "- Si es **positiva**, ambas tienden a aumentar o disminuir simultáneamente.\n",
-    "- Si es **negativa**, una aumenta mientras la otra disminuye.\n",
-    "\n",
-    "Se representa como $ \\text{Cov}(X, Y)$.\n",
-    "\n",
-    "### Fórmulas\n",
-    "\n",
-    "**Población:**  \n",
-    "$$\\sigma_{xy} = \\frac{\\sum (x_i - \\mu_x)(y_i - \\mu_y)}{N}$$\n",
-    "\n",
-    "**Muestra:**  \n",
-    "$$s_{xy} = \\frac{\\sum (x_i - \\bar{x})(y_i - \\bar{y})}{n - 1}$$\n",
-    "\n",
-    "###  Donde:\n",
-    "- $( x_i ), ( y_i)$: valores individuales de X e Y  \n",
-    "- $( mu_x), ( mu_y )$: medias poblacionales  \n",
-    "- $( bar{x} ), ( bar{y} )$: medias muestrales  \n",
-    "- $( N )$: tamaño de la población  \n",
-    "- $( n )$: tamaño de la muestra"
+    "</div>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "989db78d-9e00-4444-8eb3-95ae869ca8dd",
+   "execution_count": 5,
+   "id": "e572f5a7-a3a1-4271-84d4-ec992df397fa",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "936947dc-a792-45b8-9ffe-352a51245817",
-   "metadata": {},
-   "source": [
-    "##  Datos\n",
-    "\n",
-    "Generamos 1000 evaluaciones para 4 grupos de alumnos con distintos perfiles de rendimiento:\n",
-    "- **Grupo A**: alto y estable\n",
-    "- **Grupo B**: medio con altibajos\n",
-    "- **Grupo C**: bajo con mejoras graduales\n",
-    "- **Grupo D**: variable con alta dispersión"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "39b10263-4291-4ffb-8004-28e33f9fa772",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Grupo A</th>\n",
-       "      <th>Grupo B</th>\n",
-       "      <th>Grupo C</th>\n",
-       "      <th>Grupo D</th>\n",
-       "      <th>Evaluación</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>90.7</td>\n",
-       "      <td>73.8</td>\n",
-       "      <td>68.1</td>\n",
-       "      <td>65.6</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>90.6</td>\n",
-       "      <td>70.8</td>\n",
-       "      <td>58.9</td>\n",
-       "      <td>69.7</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>89.6</td>\n",
-       "      <td>77.4</td>\n",
-       "      <td>59.2</td>\n",
-       "      <td>54.6</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>90.0</td>\n",
-       "      <td>61.6</td>\n",
-       "      <td>66.3</td>\n",
-       "      <td>76.8</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>91.7</td>\n",
-       "      <td>74.8</td>\n",
-       "      <td>54.8</td>\n",
-       "      <td>72.8</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Grupo A  Grupo B  Grupo C  Grupo D  Evaluación\n",
-       "0     90.7     73.8     68.1     65.6           1\n",
-       "1     90.6     70.8     58.9     69.7           2\n",
-       "2     89.6     77.4     59.2     54.6           3\n",
-       "3     90.0     61.6     66.3     76.8           4\n",
-       "4     91.7     74.8     54.8     72.8           5"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
     "\n",
-    "# Simulación de datos\n",
-    "np.random.seed(616)\n",
-    "n = 1000\n",
+    "np.random.seed(616) # Fijamos la semilla para reproducibilidad\n",
+    "N = 1000 # Número de días simulados\n",
     "\n",
-    "grupo_A = 90 + 5 * np.sin(np.linspace(0, 4 * np.pi, n)) + np.random.normal(0, 3, n)\n",
-    "grupo_B = 75 + 10 * np.sin(np.linspace(0, 4 * np.pi, n)) + np.random.normal(0, 5, n)\n",
-    "grupo_C = 60 + 8 * np.sin(np.linspace(0, 4 * np.pi, n)) + np.random.normal(0, 4, n)\n",
-    "grupo_D = 70 + 15 * np.sin(np.linspace(0, 4 * np.pi, n)) + np.random.normal(0, 7, n)\n",
-    "# Tendremos un Data Frame para visualizar mejor los datos \n",
-    "df = pd.DataFrame({\n",
-    "    \"Grupo A\": np.round(grupo_A, 1),\n",
-    "    \"Grupo B\": np.round(grupo_B, 1),\n",
-    "    \"Grupo C\": np.round(grupo_C, 1),\n",
-    "    \"Grupo D\": np.round(grupo_D, 1),\n",
-    "    \"Evaluación\": np.arange(1, n + 1)\n",
-    "})\n",
-    "\n",
-    "df.head()"
+    "# Simulación de producción diaria (unidades producidas)\n",
+    "maquina_A = 200 + 15 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 5, N)\n",
+    "maquina_B = 180 + 20 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 8, N)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "07a4975b-23e2-468e-8134-120115824b63",
+   "id": "be3fb532-2fce-4fad-874f-d3623596f22a",
    "metadata": {},
    "source": [
-    "##  Problema 1: Productos de desviaciones\n",
     "\n",
-    "Calculamos  $(x_i - \\bar{x})(y_i - \\bar{y})$ para los grupos A y B, y sumamos los resultados, y lo guardamos en `suma_productos`."
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "## Ejercicio 2.\n",
+    "\n",
+    "Para el conjunto de valores calculados en el ejercicio **1** y almacenados en los arreglos `maquina_A` y `maquina_B`, calcula la **covarianza muestral** en dos pasos:\n",
+    "\n",
+    "1. Calcula las desviaciones de cada máquina respecto a su media y luego el producto de esas desviaciones:\n",
+    "\n",
+    "```python\n",
+    "dev_A = maquina_A - np.mean(maquina_A)\n",
+    "dev_B = maquina_B - np.mean(maquina_B)\n",
+    "\n",
+    "producto_desv = dev_A * dev_B\n",
+    "suma_productos = np.sum(producto_desv)\n",
+    "\n",
+    "print(\"Suma de productos de desviaciones =\", suma_productos)\n",
+    "```\n",
+    "\n",
+    "2. Divide el resultado de la suma entre \\$(n - 1)\\$ para obtener la covarianza muestral:\n",
+    "\n",
+    "```python\n",
+    "cov_AB = suma_productos / (N - 1)\n",
+    "print(\"Covarianza muestral A-B =\", cov_AB)\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "* Copia los códigos de los puntos 1 y 2 en la celda que sigue y ejecútalos.\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "64423f2b-d003-4946-82c3-de9e43ec7cfe",
+   "execution_count": 6,
+   "id": "9ce17a25-ed5a-4ed5-ad70-577030d7ddf2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suma de productos de desviaciones: 25637.41\n"
+      "Suma de productos de desviaciones = 152391.35654016462\n"
      ]
     }
    ],
    "source": [
-    "### BEGIN SOLUTION\n",
-    "dev_A = grupo_A - np.mean(grupo_A)\n",
-    "dev_B = grupo_B - np.mean(grupo_B)\n",
+    "dev_A = maquina_A - np.mean(maquina_A)\n",
+    "dev_B = maquina_B - np.mean(maquina_B)\n",
+    "\n",
     "producto_desv = dev_A * dev_B\n",
     "suma_productos = np.sum(producto_desv)\n",
-    "# END SOLUTION\n",
-    "print(f\"Suma de productos de desviaciones: {suma_productos:.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e6ccc97a-7bcb-4eee-a0e3-30904bb0bcef",
-   "metadata": {},
-   "source": [
-    "##  Problema 2: Covarianza muestral\n",
     "\n",
-    "Usamos la fórmula de muestra para calcular la covarianza entre A y B sin usar <span style=\"color: red\">.Cov()</span>  \n"
+    "print(\"Suma de productos de desviaciones =\", suma_productos)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4d25e44e-d094-48ac-9a43-10c05c9ee0f8",
+   "id": "ae8d2518-20aa-4029-9727-6f525a67879e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Covarianza muestral AB: 25.66\n"
+      "Covarianza muestral A-B = 152.54390044060523\n"
      ]
     }
    ],
    "source": [
-    "### BEGIN SOLUTION\n",
-    "cov_AB = suma_productos / (n - 1)\n",
-    "print(f\"Covarianza muestral AB: {cov_AB:.2f}\")\n",
-    "# END SOLUTION"
+    "cov_AB = suma_productos / (N - 1)\n",
+    "print(\"Covarianza muestral A-B =\", cov_AB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd5e0aa4-c75b-45b4-a9b1-aae5233954aa",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "## Ejercicio 3.\n",
+    "\n",
+    "El siguiente código representa una función de Python que calcula la **covarianza** entre dos conjuntos de valores. La función recibe los arreglos `x` y `y` con los valores, y permite calcular tanto la covarianza **muestral** como la **poblacional** dependiendo del parámetro `poblacional`.\n",
+    "\n",
+    "```python\n",
+    "def covarianza(x, y, poblacional=False):\n",
+    "    x_mean = np.mean(x)\n",
+    "    y_mean = np.mean(y)\n",
+    "    productos = (x - x_mean) * (y - y_mean)\n",
+    "    divisor = len(x) if poblacional else (len(x) - 1)\n",
+    "    return np.sum(productos) / divisor\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "* Copia el código anterior en la siguiente celda y ejecútalo.\n",
+    "\n",
+    "* Posteriormente, en otra celda utiliza la función `covarianza()` para calcular la covarianza entre las máquinas **A**, **B**, **C** y **D**, como sigue:\n",
+    "\n",
+    "```python\n",
+    "# Definimos los grupos C y D\n",
+    "maquina_C = 150 + 10 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 6, N)\n",
+    "maquina_D = 170 + 25 * np.sin(np.linspace(0, 4 * np.pi, N)) + np.random.normal(0, 10, N)\n",
+    "\n",
+    "# Aplicación de la función de covarianza\n",
+    "cov_m_AB = covarianza(maquina_A, maquina_B)\n",
+    "cov_p_AB = covarianza(maquina_A, maquina_B, poblacional=True)\n",
+    "cov_m_CD = covarianza(maquina_C, maquina_D)\n",
+    "cov_p_CD = covarianza(maquina_C, maquina_D, poblacional=True)\n",
+    "\n",
+    "print(\"Covarianza muestral AB =\", cov_m_AB)\n",
+    "print(\"Covarianza poblacional AB =\", cov_p_AB)\n",
+    "print(\"Covarianza muestral CD =\", cov_m_CD)\n",
+    "print(\"Covarianza poblacional CD =\", cov_p_CD)\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "</div>\n",
+    "\n"
    ]
   },
   {
