--- a/varianza.ipynb
+++ b/varianza.ipynb
@@ -409,8 +409,7 @@
     "\n",
     "## Ejercicio 5.\n",
     "\n",
-    "Si ejecutaste correctamente los cálculos de varianza, podemos visualizar la **dispersión de los datos** de los grupos A,B,C y Dcon un gráfico que muestra la media en una linea roja  y la variabilidad, la cual podemos ver en.\n",
-    "La barra representa la **media de cada grupo** y la línea roja muestra la **desviación estándar** (raíz cuadrada de la varianza), dando una idea clara de la dispersión de los datos.\n",
+    "Si ejecutaste correctamente los cálculos de varianza, podemos visualizar la **dispersión de los datos** de los grupos A,B,C y Dcon un gráfico que muestra la media en una linea roja  y la variabilidad, la cual podemos ver en lo alejado que estan los puntos de esta .\n",
     "<br>\n",
     "\n",
     "</div>\n"
