--- a/correlacion.ipynb
+++ b/correlacion.ipynb
@@ -15,9 +15,9 @@
    "source": [
     "## Definición\n",
     "\n",
-    "La correlación es una medida estadística que indica la relación entre dos variables cuantitativas, mostrando cuánto se asocian sus valores. Se mide típicamente con el coeficiente de correlación de Pearson, que varía entre -1 y 1. Un valor de 1 indica una correlación positiva perfecta, -1 una correlación negativa perfecta, y 0 indica ausencia de correlación lineal.\n",
+    "La correlación es una medida estadística que indica la relación entre dos variables cuantitativas, indicando el grado y la dirección de la relación lineal entre sus valores. Se mide típicamente con el coeficiente de correlación de Pearson, que varía entre -1 y 1. Un valor de 1 indica una correlación positiva perfecta, -1 una correlación negativa perfecta, y 0 indica ausencia de correlación lineal.\n",
     "\n",
-    "Por ejemplo, si consideramos las variables $X = \\\\{1, 2, 3, 4\\\\}$ y $Y = \\\\{2, 4, 6, 8\\\\}$, la correlación positiva perfecta se observa porque $Y = 2X$. El coeficiente se calcula como:\n",
+    "Por ejemplo, en un caso idealizado con las variables $ X = \\{1, 2, 3, 4\\} $ y $ Y = \\{2, 4, 6, 8\\} $, se observa una correlación positiva perfecta porque $ Y = 2X $. El coeficiente de correlación de Pearson se calcula a partir de la pendiente $ m $ y la ordenada al origen $ b $ de la recta de regresión lineal, definidas como:\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
