--- a/covarianza.ipynb
+++ b/covarianza.ipynb
@@ -56,8 +56,7 @@
     "\n",
     "## Ejercicio 1.\n",
     "\n",
-    "Con el siguiente código en Python se genera un conjunto de **mediciones de producción diaria** de cuatro máquinas durante un periodo de \\$1000\\$ días.\n",
-    "\n",
+    "El siguiente código en Python simula la producción diaria de cuatro máquinas durante $1000$ días.\n",
     "```python\n",
     "import numpy as np\n",
     "\n",
