--- a/varianza.ipynb
+++ b/varianza.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "## Ejercicio 1.\n",
     "\n",
-    "Nuevamente el siguiente código en Python se genera un conjunto de datos simulados que representan las evaluaciones de desempeño académico de un grupo de alumnos (Grupo A) durante un periodo de $1000$ evaluaciones.\n",
+    "El siguiente código en Python se genera un conjunto de datos simulados que representan las evaluaciones de desempeño académico de un grupo de alumnos (Grupo A) durante un periodo de $1000$ evaluaciones.\n",
     "\n",
     "```python\n",
     "import numpy as np\n",
@@ -69,8 +69,8 @@
     "# Grupo A: alto y estable\n",
     "grupo_A = 90 + 5 * np.sin(np.linspace(0, 4 * np.pi, n)) + np.random.normal(0, 3, n)\n",
     "\n",
-    "\n",
-    "```"
+    "```\n",
+    "El código simula calificaciones usando una función seno `(np.sin())` con ruido gaussiano `(np.random.normal())`, almacenando los datos en un arreglo `numpy.ndarray` con una semilla fija `(np.random.seed)` para reproducibilidad.\"\n"
    ]
   },
   {
