--- a/desviacion_estandar.ipynb
+++ b/desviacion_estandar.ipynb
@@ -77,7 +77,7 @@
     "\n",
     "## Ejercicio 1.\n",
     "\n",
-    "Con el siguiente codigo se genera un conjunto de datos, que simula ser las calificaciones de un grupo de mil estudiantes en un examen en especifico.\n",
+    "Con el siguiente código se genera un conjunto de datos, que simula ser las calificaciones de un grupo de mil estudiantes en un examen en especifico.\n",
     "```python\n",
     "import numpy as np\n",
     "# Fijamos la semilla para reproducibilidad\n",
@@ -98,17 +98,6 @@
     "- **Variables simuladas**: La variable grupo_A representa las calificaciones de un grupo de estudiantes con un rendimiento alto y estable, en torno a $90$ puntos.\n",
     "\n",
     "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1d848adc-20f9-46ab-8204-145bcd4d38d4",
-   "metadata": {},
-   "source": [
-    "# Datos\n",
-    "Para este ejercicio decidimos crear un una serie similar a la del ejercicio anterior de 1000 evaluaciones (pueden representar días, semanas o exámenes) para dos grupos de estudiantes. Cada grupo tiene un perfil distinto de rendimiento:\n",
-    "- Grupo A: alumnos con rendimiento alto y estable. Sus calificaciones giran en torno a los 90 puntos, con pequeñas fluctuaciones. Representan un grupo disciplinado, con buen dominio de los contenidos.\n",
-    "- Grupo B: alumnos con rendimiento medio y más variable. Sus calificaciones rondan los 75 puntos, pero con altibajos más marcados. Este grupo podría estar influenciado por factores externos como carga académica, motivación o hábitos de estudio.\n"
    ]
   },
   {
