--- a/correlacion.ipynb
+++ b/correlacion.ipynb
@@ -11,25 +11,40 @@
   {
    "cell_type": "markdown",
    "id": "84ef8516-9969-4749-8be3-bf66d56218d3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
+    "\n",
     "## Definición\n",
     "\n",
     "La correlación es una medida estadística que indica la relación entre dos variables cuantitativas, indicando el grado y la dirección de la relación lineal entre sus valores. Se mide típicamente con el coeficiente de correlación de Pearson, que varía entre -1 y 1. Un valor de 1 indica una correlación positiva perfecta, -1 una correlación negativa perfecta, y 0 indica ausencia de correlación lineal.\n",
     "\n",
-    "Por ejemplo, en un caso idealizado con las variables $ X = \\{1, 2, 3, 4\\} $ y $ Y = \\{2, 4, 6, 8\\} $, se observa una correlación positiva perfecta porque $ Y = 2X $. El coeficiente de correlación de Pearson se calcula a partir de la pendiente $ m $ y la ordenada al origen $ b $ de la recta de regresión lineal, definidas como:\n",
+    "Por ejemplo, en un caso idealizado con las variables \\( X = \\{1, 2, 3, 4\\} \\) y \\( Y = \\{2, 4, 6, 8\\} \\), se observa una correlación positiva perfecta porque \\( Y = 2X \\). El coeficiente de correlación de Pearson se calcula a partir de la pendiente \\( m \\) y la ordenada al origen \\( b \\) de la recta de regresión lineal, definidas como:\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
-    "**Definición.**\n",
-    "$$\n",
-    "m = \\dfrac{\\sum_{i=1}^{N} x_i(y_i - \\bar{y})}{\\sum_{i=1}^{N} x_i(x_i - \\bar{x})} \n",
-    "$$\n",
-    "<br>\n",
-    "$$\n",
-    "b = \\bar{y} - m \\bar{x} \n",
-    "$$\n",
-    "\n"
+    "**Definición.**  \n",
+    " Claro, aquí está tu texto corregido con la segunda fórmula:\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Definición\n",
+    "\n",
+    "La correlación es una medida estadística que indica la relación entre dos variables cuantitativas, indicando el grado y la dirección de la relación lineal entre sus valores. Se mide típicamente con el coeficiente de correlación de Pearson, que varía entre -1 y 1. Un valor de 1 indica una correlación positiva perfecta, -1 una correlación negativa perfecta, y 0 indica ausencia de correlación lineal.\n",
+    "\n",
+    "Por ejemplo, en un caso idealizado con las variables \\( X = \\{1, 2, 3, 4\\} \\) y \\( Y = \\{2, 4, 6, 8\\} \\), se observa una correlación positiva perfecta porque \\( Y = 2X \\). El coeficiente de correlación de Pearson se calcula a partir de la pendiente \\( m \\) y la ordenada al origen \\( b \\) de la recta de regresión lineal, definidas como:\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "**Definición.**  \n",
+    "\n",
+    "$m = \\frac{\\sum_{i=1}^{n} (Y_i - \\overline{Y})(X_i - \\overline{X})}{\\sum_{i=1}^{n} (X_i - \\overline{X})^2}$\n",
+    "<br>  \n",
+    "\n",
+    "$\\hat{b}_0 = \\overline{Y} - m \\overline{X}$\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
@@ -271,7 +286,9 @@
   {
    "cell_type": "markdown",
    "id": "fce8638a-9643-4aee-bf31-790d26850c86",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "\n",
     "\n",
