--- a/correlacion.ipynb
+++ b/correlacion.ipynb
@@ -42,7 +42,7 @@
     "$m = \\frac{\\sum_{i=1}^{n} (Y_i - \\overline{Y})(X_i - \\overline{X})}{\\sum_{i=1}^{n} (X_i - \\overline{X})^2}$\n",
     "<br>  \n",
     "\n",
-    "$\\hat{b}_0 = \\overline{Y} - m \\overline{X}$\n",
+    "$b = \\overline{Y} - m \\overline{X}$\n",
     "\n",
     "</div>\n"
    ]
